2006-03-21  Karsten Dambekalns <karsten@typo3.org>

	* EM: Moved some code around and added a method for installing an extension with one method call (for use in impexp)

2006-03-20  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Fixed more workspace issues:
	* Added info about workspaces to Tools > User Admin (sorry, considered important)
	* Frontend editing: Fixed that it works with localizations. Disabled many of the features in draft workspaces (since we have no time for an implementation)

2006-03-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fix a few language/locale codes in t3lib_cs.php

2006-03-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* htmlArea RTE: remove alternate skins from core CVS.

2006-03-20  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Reverted the patch "Double-checking of match-conditions" because it caused trouble
	* Fixed bug #2767: wrong wraps for sitemap/menu elements in accessibility mode
	* New Feature #2341: add headers for table CE (accessibility)

2006-03-20  Wolfgang Klinger <wk@plan2.net>

	* Fixed bug #608: Typolink for mounted pages from another domain

2006-03-19  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Corrections/adjustments to the htmlArea RTE extension (see details in local ChangeLog)

2006-03-19  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Created exclusiveKeys for the TCA field configuration of type "select"
	* Configured fields fe_groups of "pages" and "tt_content" to use exclusiveKeys for "Hide at login" and "Show at any login"

2006-03-18  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added constant TYPO3_copyright_year for login page and about module

2006-03-17  Bernhard Kraft  <kraftb@kraftb.at>

	* Added .us and .at flags to typo3/gfx/flags/

2006-03-17  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Fixed workspace related issues. More will follow Monday.

2006-03-16  Karsten Dambekalns <karsten@typo3.org>

	* EM: Fixed bugs #2787, #2785, #1807